--- a/package.json
+++ b/package.json
@@ -1,15 +1,19 @@
 {
-  "name": "pronunciation-tool",
+  "name": "speech-pronunciation-backend",
   "version": "1.0.0",
-  "description": "A backend server for the pronunciation tool",
+  "description": "Backend for text-to-speech pronunciation using Google Cloud TTS",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js",
+    "postinstall": "npm install"
   },
   "dependencies": {
-    "express": "^4.18.2",
-    "dotenv": "^16.3.1",
+    "@google-cloud/text-to-speech": "^4.0.0",
     "cors": "^2.8.5",
-    "@google-cloud/text-to-speech": "^4.0.0"
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "body-parser": "^1.20.2",
+    "fs": "0.0.1-security",
+    "util": "^0.12.5"
   }
 }
